-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.2.1
-
Fix Version/s: 5.4.0
-
Component/s: Core: Threads
-
Labels:
-
Platform/s:
-
Commits:b46e48f1b72267d14fc4b9e1969f0fc0a4eb739e I18a5573df2a8fa32d1982c61e665d5df664b6db0 c328b39181d7ca7e4babadee7469578b9fd84e3e
Threading is quite fragile as is in WinRT and has to be fixed in order to be used properly.
Every once in a while an app crashed because abourt() was called on a thread or waiting for something does not work as an invalid id is passed to WaitForSingleObjectEx.
While fixing threading itself the autotests should of course be fixed as well.